# mammothmoda

./: README.md  pyproject.toml  requirements.txt
mammothmoda2/model/: __init__.py  configuration_mammothmoda2.py  modeling_mammothmoda2.py  processing_mammothmoda2.py
mammothmoda2/model/mammothmoda2_dit/: diffusion_transformer.py
mammothmoda2/model/mammothmoda2_qwen2_5_vl/: __init__.py  configuration_mammothmoda2_qwen2_5_vl.py  modeling_mammothmoda2_qwen2_5_vl.py
mammothmoda2/utils/: __init__.py  t2i_utils.py  vae_processor.py
mammothmoda25/: README.md  config.py  infer_mammoth25.py  infer_mammoth_moda25.py  moe_layer.py  pipeline_mammothmoda.py  transformer_mammothmoda.py  vlm_refiner.py
mammothmoda25/src/: __init__.py  config.py  moe_layer.py  pipeline_mammothmoda.py  transformer_mammothmoda.py
mamoda2/: README.md
mamoda2/mammothmoda2/model/mammothmoda2_dit/: attention_processor.py  block_lumina2.py
mamoda2/mammothmoda2/utils/: t2i_utils.py
mamoda25/: README.md  infer_mammoth25.py
mamoda25/src/: pipeline_mammothmoda.py
